# thoughts

./: .gitignore  Project ideas.md  README.md  about.md  contact.markdown  deploy.sh  index.html  myblog.cabal  stack.yaml  thoughts.cabal
docs/: Project ideas.html  about.html  archive.html  contact.html  index.html
docs/posts/: 2019-06-05-A-Tip-On-Compilation.html  2019-06-20-The-Linux-file-path.html  2019-06-29-Concurrency.html  2019-07-06-nixOS-usb-set-up.html  2019-08-10-nixOS-Installation.html  2019-08-20-multi-screens.html  2020-01-17-images-to-pdf.html  2020-01-20-prototyping-server.html  2020-01-22-telegram-long-polling-and-webhooks.html  2020-02-09-setting-up-a-python-project.html  2020-02-10-remapping-keyboard-layout.html  2020-03-22-ghcid-on-nixos.html  (+1 more)
posts/: 2019-06-04-To-The-Reader.markdown  2019-06-05-A-Tip-On-Compilation.markdown  2019-06-06-Afternoon-Chat-With-A-Colleague.markdown  2019-06-06-Amateur-philosopher.markdown  2019-06-20-The-Linux-file-path.markdown  2019-06-29-Concurrency.markdown  2019-06-29-MUD.markdown  2019-07-06-nixOS-usb-set-up.markdown  2019-08-08-enterprise-wifi.markdown  2019-08-10-nixOS-Installation.markdown  2019-08-20-multi-screens.markdown  2020-01-17-images-to-pdf.md  2020-01-20-prototyping-server.md  2020-01-22-telegram-long-polling-and-webhooks.md  2020-02-09-setting-up-a-python-project.md  2020-02-10-remapping-keyboard-layout.md  2020-02-11-remapping-keyboard-layout-part2.md  2020-03-22-ghcid-on-nixos.md  2020-06-05-Generating-documentation-with-API-types.md
src/: SiteConfig.hs  site.hs
templates/: default.html
