name:                thoughts
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kwannoel/thoughts#documentation
license:             BSD3
license-file:        LICENSE
author:              Noel
maintainer:          noelkwan1998@gmail.com
copyright:           2019 Noel Kwan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable thoughts
  hs-source-dirs:      src
  other-modules:       SiteConfig
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       raw-strings-qq
